# plz

./: .gitignore  Cargo.toml  LICENSE  README.md  artefact_from_3yo_sister.txt  endpoints.txt  flake.nix
.cargo/: config.toml
commands/src/: lib.rs
flags/src/: lib.rs
metadata/: Cargo.toml  IMPORTANT.md
metadata/src/: lib.rs
metadata/src/depend_kind/: mod.rs
metadata/src/installed/: mod.rs
metadata/src/parsers/: mod.rs
metadata/src/parsers/apt/: mod.rs
metadata/src/parsers/dew/: mod.rs
metadata/src/parsers/pax/: mod.rs
metadata/src/processed/: mod.rs
metadata/src/versioning/: mod.rs
settings/: Cargo.toml
settings/src/: lib.rs
src/: errors.rs  flags.rs  main.rs  settings.rs  utils.rs
src/commands/: configure.rs  dew_init.rs  install.rs  mod.rs  plz_init.rs  remove.rs  unbind.rs  update.rs  upgrade.rs
src/configure/: mod.rs
src/dew_init/: mod.rs
src/emancipate/: mod.rs
src/install/: mod.rs
src/metadata/: IMPORTANT.md  depend_kind.rs  installed.rs  mod.rs  processed.rs  versioning.rs
src/metadata/parsers/: apt.rs  dew.rs  mod.rs  plz.rs
src/pax_init/: mod.rs
src/remove/: mod.rs
src/update/: mod.rs
src/upgrade/: mod.rs
src/utils/: mod.rs  range.rs  verreq.rs  version.rs
utils/: Cargo.toml
utils/src/: errors.rs  lib.rs
