[workspace]
resolver = "3"
members = ["commands", "flags", "metadata", "settings", "statebox", "utils"]

[workspace.dependencies]
commands = { path = "./commands" }
debian-control = "0.2.0"
flags = { path = "./flags" }
lazy-regex = { version = "3.4.2" }
metadata = { path = "./metadata" }
nix = { version = "0.30.1", features = ["user"] }
reqwest = "0.12.24"
settings = { path = "./settings" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
snafu = "0.8.9"
statebox = { path = "./statebox" }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
utils = { path = "./utils" }

[package]
name = "pax"
version = "0.1.1"
edition = "2024"

[dependencies]
commands.workspace = true
flags.workspace = true
metadata.workspace = true
reqwest.workspace = true
settings.workspace = true
snafu.workspace = true
statebox.workspace = true
tokio.workspace = true
utils.workspace = true

[profile.release]
opt-level = 3

# [env]
# You can find some static variables in .cargo/config.toml
