
[dependencies]
debian-control = "0.3.0"
lazy-regex = { version = "3.4.2" }
nix = { version = "0.31.2", features = ["user"] }
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
snafu = "0.9.0"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.48.0", features = ["full"] }

[package]
name = "dew"
version = "0.1.1"
edition = "2024"

[profile.release]
opt-level = 3

# [env]
# You can find some static variables in .cargo/config.toml
